# Translational-Equivariant-Performers

./: .gitignore  LICENSE  README.md  pyproject.toml  sample_CIFAR10.ipynb
CNN/: CIFAR10.ipynb  FashionMNIST.ipynb  MNIST.ipynb
notebooks/: 2020_12_26-MH-Constrained_weights.ipynb  2021_01_06-Check_translational_equivariance.ipynb  2021_01_07-Content_dependent_rel_pos.ipynb  2021_01_07-Faster_block_diagonal_matrices.ipynb  2021_01_12-Prototype_image_shift_experiment.ipynb  2021_01_13-Visualization_of_shift_experiment.ipynb
relative_performer/: __init__.py  clipped_relative_attention.py  constrained_relative_encoding.py  embedding_utils.py  logging_utils.py  performer_enc_dec.py  performer_pytorch.py  reversible.py  test.py  test_recursive.py  test_shifted.py  train.py  training_utils.py
results/: FashionMNIST_1_shift.csv  MNIST_1_shift.csv  MNIST_1_shift_alternative.csv  model_evaluations.csv  performerS2_on_test.csv  performers_on_test.csv
scripts/: image_shift.py  tensorboard_data_collector.py  zero_col_cnt_img.py
